--- a/arch/arm/boot/dts/sun7i-a20-cubieboard2.dts
+++ b/arch/arm/boot/dts/sun7i-a20-cubieboard2.dts
@@ -50,6 +50,20 @@
 #include <dt-bindings/interrupt-controller/irq.h>
 
 / {
+	reserved-memory {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges;
+
+		de-mali-shm: cma {
+			compatible = "shared-dma-pool";
+			size = <0x8000000>;
+			reusable;
+		};
+	};
+};
+
+/ {
 	model = "Cubietech Cubieboard2";
 	compatible = "cubietech,cubieboard2", "allwinner,sun7i-a20";
 
@@ -85,6 +99,36 @@
 			gpios = <&pio 7 20 GPIO_ACTIVE_HIGH>;
 		};
 	};
+        
+        
+	mali: gpu@1c40000 {
+		compatible = "allwinner,sun7i-a20-mali", "arm,mali-400";
+		reg = <0x01c40000 0x10000>;
+		memory-region = <&de-mali-shm>;
+                
+		interrupts = <GIC_SPI 69 IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI 70 IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI 71 IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI 72 IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI 74 IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI 75 IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI 73 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-names = "gp",
+				  "gpmmu",
+				  "pp0",
+				  "ppmmu0",
+				  "pp1",
+				  "ppmmu1",
+				  "pmu";
+		clocks = <&ccu CLK_AHB_GPU>, <&ccu CLK_GPU>;
+		clock-names = "bus", "core";
+		resets = <&ccu RST_GPU>;
+
+		assigned-clocks = <&ccu CLK_GPU>;
+		assigned-clock-rates = <312000000>;
+	};
+        
+        
 };
 
 &ahci {
@@ -102,6 +146,8 @@
 
 &de {
 	status = "okay";
+	memory-region = <&de-mali-shm>;
+
 };
 
 &ehci0 {
