sun7i-a20-cubieboard2.dts: Correct reserved memory node in device tree

--- a/arch/arm/boot/dts/sun7i-a20-cubieboard2.dts
+++ b/arch/arm/boot/dts/sun7i-a20-cubieboard2.dts
@@ -55,10 +55,11 @@
 		#size-cells = <1>;
 		ranges;
                 
-                de_mali_shm: mali_memory {
+                de_mali_shm: disp_memory {
 			compatible = "shared-dma-pool";
 			size = <0x8000000>;
-			/* reusable; */
+			alignment = <0x2000>;
+			reusable;
 		};
 	};
 };
