--- a/arch/arm/boot/dts/sun7i-a20-cubieboard2.dts
+++ b/arch/arm/boot/dts/sun7i-a20-cubieboard2.dts
@@ -102,33 +102,11 @@
 	};
         
         
-	mali: gpu@1c40000 {
-		compatible = "allwinner,sun7i-a20-mali", "arm,mali-400";
-		reg = <0x01c40000 0x10000>;
-		memory-region = <&de_mali_shm>;
-                
-		interrupts = <GIC_SPI 69 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 70 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 71 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 72 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 74 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 75 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 73 IRQ_TYPE_LEVEL_HIGH>;
-		interrupt-names = "gp",
-				  "gpmmu",
-				  "pp0",
-				  "ppmmu0",
-				  "pp1",
-				  "ppmmu1",
-				  "pmu";
-		clocks = <&ccu CLK_AHB_GPU>, <&ccu CLK_GPU>;
-		clock-names = "bus", "core";
-		resets = <&ccu RST_GPU>;
-
-		assigned-clocks = <&ccu CLK_GPU>;
-		assigned-clock-rates = <312000000>;
-	};
-        
+	soc@1c00000 {
+            mali: gpu@1c40000 {
+                    memory-region = <&de_mali_shm>;
+            };
+        };
         
 };
 
